# Ancient-Coin-Detection-System

./: .gitignore  PROJECT_CLEANUP.md  README.md  compare_models.py  dataset_check.py  main_gui.py  predict.py  pyproject.toml  requirements.txt  split_dataset_by_origin.py  train.py
config/: data.yaml
